Fixed  help page scrollbar not being all way to right edge

--- a/webApp/libraries/style.css
+++ b/webApp/libraries/style.css
@@ -24,7 +24,7 @@
   #helpPageContent {
     overflow-x: hidden;
     overflow-x: auto;
-    width: 160vh;
+    width: 87%;
     height: 80vh;
   }
 
